--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -1,3 +1,5 @@
+service.yaml
+
 apiVersion: v1
 kind: Service
 metadata:
@@ -9,4 +11,3 @@ spec:
   - port: 8080
     protocol: TCP
     targetPort: 8080
-
